2020-01-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_button.c: Convert and update signal documentation.

    * src/widgets/geda_menu_shell.c: Add ancillary type = GEDA_TYPE_MENU_SHELL,
      so that geda_menu_shell_get_type for each new signal.

2019-12-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_image_menu_item.c: add todo documentation template.

    * src/widgets/geda_radio_menu_item.c: Update Doxygen group description.

    * tests/test_image_menu_item.c: Add check for geda_image_menu_item_get_accel_group.

2019-12-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Add internal gobject and widget class comments.
      Add function documentation for geda_accel_label_get_accel_width.

    * src/widgets/geda_combobox.c: Add internal GedaComboBoxClass comments, convert
      container_class and widget_class comment to internal documentation.

    * src/widgets/geda_image_menu_item.c: Reorganize module, remove unneeded ingroup
      Doxygen tags.

    * src/widgets/geda_menu_shell.c: Update Doxygen group description.

2019-12-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Add documentation for geda_accel_label_refetch
      and todo template for geda_accel_label_get_accel_width and reorganize module.

    * tests/test_bulb.c: Add checks for geda_bulb_group_set_active_index.

2019-12-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_entry.c: Rename function geda_entry_activate ->
      geda_entry_process_entry. Add virtual over-ride geda_entry_widget_key_press
      to emit "activate" on the GtkEntry.

    * src/widgets/geda_menu.c: Add internal documentation/comment.

2019-11-04 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro gtk_dialog_get_content_area for Gtk<3.0.

    * src/dialogs/geda_file_chooser.c: Rename macro; ChooseClass -> ChooserClass.
      Utilize gtk_dialog_get_content_area in get_filter_button.
